@@ -38,27 +38,15 @@
 #ifndef NS_H
 #define NS_H
 
-#define NS_MAJOR_VERSION    4
-#define NS_MINOR_VERSION    99
-#define NS_RELEASE_SERIAL   0
-#define NS_VERSION_NUM          (NS_MAJOR_VERSION * 10000 \
-                                + NS_MINOR_VERSION * 100 \
-                                + NS_RELEASE_SERIAL)
-#define NS_VERSION          "4.99"
-#define NS_PATCH_LEVEL      "4.99.0"
-
-#define NS_ALPHA_RELEASE    0
-#define NS_BETA_RELEASE     1
-#define NS_FINAL_RELEASE    2
-
-/*
- * Be sure to move to NS_FINAL_RELEASE when
- * finished with non-production stages.
- */
-
-#define NS_RELEASE_LEVEL    NS_ALPHA_RELEASE
+#define NS_ALPHA_RELEASE 0
+#define NS_BETA_RELEASE  1
+#define NS_FINAL_RELEASE 2
 
 #include "nsthread.h"
+
+#define NS_VERSION_NUM (NS_MAJOR_VERSION * 10000 \
+                       + NS_MINOR_VERSION * 100 \
+                       + NS_RELEASE_SERIAL)
 
 #ifdef NSD_EXPORTS
 #undef NS_EXTERN
